reponsive about us

--- a/about-us.html
+++ b/about-us.html
@@ -193,41 +193,43 @@
 
 
 
-  <!-- ***********About Us Start************ -->
+   <!-- ***********About Us Start************ -->
 
-  <div class="container-fluid about-us-Backg px-0" id="aboutUs">
-    <div class="about-us-bg-color">
-      <div class="container">
-        <div class="row">
+   <div class="container-fluid  px-0" id="aboutUs">
 
-          <div class="col-4">
-            <div class="relative-about shadow">
+    <div class="container about-us-Backg ">
+      <div class="row about-us-bg-color">
 
-              <div class="absolute-about p-4">
-                <img class="img-fluid" src="images2/industry-lanes-building-architectus_1.jpg" alt="">
-              </div>
+        <div class="col-md-4 col-12 d-flex justify-content-center">
+          <div class="relative-about shadow">
+
+            <div class="absolute-about p-4">
+              <img class="img-fluid" src="images2/industry-lanes-building-architectus_1.jpg" alt="">
             </div>
           </div>
-
-          <div class="col-8 py-4 ps-5">
-            <p><b>ABOUT US</b></p>
-            <h2><b>We Are Service Provider</b></h2>
-            <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
-              and as one of the pioneers of the real estate sector of Bangladesh. Our dedication and years of experience
-              with an ongoing pursuit of excellence have earned us an advantageous position in the sector. We are truly
-              humbled by the trust and love of our customers, which has steadily grown in the last two decades.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos quia quam hic
-              recusandae nam, voluptate sint ullam sit veniam doloremque possimus, repellat eaque? Nobis atque,
-              assumenda, iste dolorem neque obcaecati illo sint officiis id architecto, aliquam incidunt. Sit repellat
-              dignissimos eum quos perferendis eaque. Porro excepturi soluta ab voluptatum?Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Ab saepe enim placeat earum facilis nisi. Quasi, nemo sed tenetur iste,
-              repellendus culpa mollitia earum voluptatem architecto, molestias modi? Dolor, maxime?</p>
-
-
-          </div>
         </div>
+
+        <div class="col-md-8 col-12 py-4 ps-5">
+
+          <p><b>ABOUT US</b></p>
+          <h2><b>We Are Service Provider</b></h2>
+          <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
+            and as one of the pioneers of the real estate sector of Bangladesh. Our dedication and years of experience
+            with an ongoing pursuit of excellence have earned us an advantageous position in the sector. We are truly
+            humbled by the trust and love of our customers, which has steadily grown in the last two decades.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos quia quam hic
+            recusandae nam, voluptate sint ullam sit veniam doloremque possimus, repellat eaque? Nobis atque,
+            assumenda, iste dolorem neque obcaecati illo sint officiis id architecto, aliquam incidunt. Sit repellat
+            dignissimos eum quos perferendis eaque. Porro excepturi soluta ab voluptatum?Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Ab saepe enim placeat earum facilis nisi. Quasi, nemo sed tenetur iste,
+            repellendus culpa mollitia earum voluptatem architecto, molestias modi? Dolor, maxime?</p>
+
+
+        </div>
+
       </div>
     </div>
+
   </div>
 
   <!-- ***********About Us End************ -->
@@ -240,14 +242,14 @@
       <div class="container ">
         <div class="row py-5 ">
 
-          <div class="col-12 our-ser-top-title d-flex justify-content-between mb-4">
+          <div class="col-12 our-ser-top-title d-md-flex justify-content-md-between mb-4">
 
-            <div class="service-title">
+            <div class="col-md-6 col-12 service-title">
               <p class="text-white font-wt">LANDVIEW GROUP</p>
               <h2 class="text-white font-wt">Our Businesses</h2>
             </div>
 
-            <div class="learn-more-ser-btn">
+            <div class="col-md-6 col-12 learn-more-ser-btn d-md-flex justify-content-end">
 
               <a href="#"><button type="button" style="width: 240px; height: 50px; background-color: #FFD563;"
                   class="btn "><b>LEARN MORE BUSINESS</b>
@@ -256,14 +258,14 @@
 
           </div>
 
-          <div class="col-6">
-            <div class="bg-white mb-3  shadow-sm rounded">
+          <div class="col-md-6 col-12 mb-3">
+            <div class="bg-white shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-development-and-design.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Development & Design Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quo earum
                       temporibus quibusdam excepturi doloribus?</p>
@@ -276,14 +278,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white  shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-builders.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Builders Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere laborum fugiat
                       culpa consequatur nisi aut consequatur nisi consequatur nisi?
@@ -298,14 +300,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white  shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-properties.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Properties Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad ea, nihil
                       perspiciatis consequuntur omnis officiis.</p>
@@ -318,14 +320,14 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-md-6 col-12 mb-3">
             <div class="bg-white shadow-sm rounded">
               <div class="row g-0 p-3">
                 <div class="col-md-4">
                   <img src="images2/landview-engineering-and-constructions-ltd.jpg" class="img-fluid " alt="...">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body py-0">
+                <div class="col-md-8 ps-md-3 pt-3">
+                  <div class="card-body">
                     <h5 class="card-title"><b>Landview Engineering & Constructions Ltd.</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, labore?</p>
                     <a class="text-decoration-none" href="#">
@@ -354,14 +356,13 @@
     <div class="w-ch-backg-color">
       <div class="container py-5 ">
         <div class="row p-3">
-          <div class="col-8">
+          <div class=" col-12">
 
             <div class="row">
               <p class="font font-wt text-warning">WHY CHOOSE US</p>
               <h2 class="mb-5 font-wt text-success"><b>Why Would You Choose Landview Group?</b></h2>
-              <div class="col-6 d-flex mb-3">
 
-
+              <div class="col-md-6 col-12 d-flex mb-3">
                 <div class="W-Ch-Icon">
                   <i class="bi bi-view-stacked icon-design"></i>
                 </div>
@@ -379,7 +380,7 @@
 
 
 
-              <div class="col-6 d-flex">
+              <div class="col-md-6 col-12 d-flex mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -397,7 +398,7 @@
 
               </div>
 
-              <div class="col-6 d-flex">
+              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -416,7 +417,7 @@
               </div>
 
 
-              <div class="col-6 d-flex mb-3">
+              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
 
 
                 <div class="W-Ch-Icon">
@@ -434,14 +435,14 @@
               </div>
             </div>
           </div>
-          <div class="col-4 d-flex align-items-center">
+          <!-- <div class="col-md-4 col-12 d-flex align-items-center">
             <div class="relative shadow">
 
               <div class="absolute p-4">
                 <img class="img-fluid" src="images2/appartment-2jpg.jpg" alt="">
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
