--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <!-- ***********Welcome Part Start************ -->
 
 
-  <div class="container-fluid background-pic py-5 ">
+  <div class="container-fluid background-pic py-5">
 
     <div class="container">
       <div class="row">
@@ -154,7 +154,8 @@
       <div class="row icon border-bottom border-4 border-warning ">
 
 
-        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2 ">
+        <div class="col-3  icon-parts bg-dark text-white py-2 ">
+          
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -162,9 +163,10 @@
 
             <h5>100% Satisfaction</h5>
           </div>
+        
         </div>
 
-        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
@@ -174,17 +176,17 @@
           </div>
         </div>
 
-        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-shield-check"></i>
           </div>
-          <div class="box-title">
+          <div class="box-title ">
 
             <h5>Strict Code of Ethics</h5>
           </div>
         </div>
 
-        <div class="col-md-3 col-6 icon-parts bg-dark text-white py-2">
+        <div class="col-3 icon-parts bg-dark text-white py-2">
           <div class="box-icon mb-2">
             <i class="bi bi-check-square-fill"></i>
           </div>
