--- a/luxury.html
+++ b/luxury.html
@@ -173,7 +173,7 @@
 
       <!-- ***********Find properties part  Start************ -->
 
-<div class="container-fluid bg-dark shadow">
+<div class="container-fluid bg-dark shadow padding-zero">
   <div class="container">
     <div class="row icon">
       
@@ -186,19 +186,19 @@
             <a class="navbar-brand font-wt text-white"><i class="bi bi-house-heart-fill"></i> FIND A PROPERTY</a>
           </div>
             <div class="col-md-4 col-4 dropdown">
-              <button class="btn btn-outline-success dropdown-toggle " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-outline-success dropdown-toggle select-location " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 Select a Location
               </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <ul class="dropdown-menu select-location" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#">Gulshan</a></li>
                 <li><a class="dropdown-item" href="#">Dhanmondi</a></li>
                 <li><a class="dropdown-item" href="#">Uttara</a></li>
               </ul>
             </div>
-            <div class="col-md-4 col-6">
+            <div class="col-md-4 col-6 ">
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2 select-location" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success select-location" type="submit">Search</button>
             </form>
           </div>
           </div>
