--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
               <p class="font font-wt text-warning">WHY CHOOSE US</p>
               <h2 class="mb-5 font-wt text-success"><b>Why Would You Choose Landview Group?</b></h2>
 
-              <div class="col-md-6 col-12 d-flex mb-3">
-                <div class="W-Ch-Icon">
+              <div class="col-md-6 col-12 d-md-flex mb-3 text-md-start text-center">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-view-stacked icon-design"></i>
                 </div>
 
@@ -391,10 +391,10 @@
 
 
 
-              <div class="col-md-6 col-12 d-flex mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-person-heart icon-design"></i>
 
                 </div>
@@ -409,10 +409,10 @@
 
               </div>
 
-              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-md-0 mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-tags-fill icon-design"></i>
 
                 </div>
@@ -428,10 +428,10 @@
               </div>
 
 
-              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-md-0 mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-hand-thumbs-up-fill icon-design"></i>
 
                 </div>
@@ -469,7 +469,7 @@
       <div class="container ">
         <div class="row pb-5 ">
 
-          <div class="mt-5 text-white">
+          <div class="mt-5 text-white text-md-start text-center">
             <h2 class="font-wt">Recent Work Showcase</h2>
           </div>
 
