--- a/classic-collection-four.html
+++ b/classic-collection-four.html
@@ -354,160 +354,160 @@
 <!-- **********Progress details End********* -->
 
 
-<!-- **********Footer Part Start*********** -->
 
-<div class="container-fluid pt-2 " style="background-color: #0D1D35;">
-  <div class="container mt-5">
-    <div class="row text-white">
-      <div class="col-md-4 col-12 mb-2 mb-md-0">
-        <a href="index.html"><img class="mb-3" style="width: 100px; border-radius: 5px;" src="images/main_logo.png"
-            alt="footer logo"></a>
+  <!-- **********Footer Part Start*********** -->
 
-        <p>Landview Group is a locally owned developer company in Gulshan, Dhaka that specializes in a full range of
-          property services.</p>
-        <div class="all-socail-logo mt-4">
-          <div class="social-logo">
-            <a href="#"><i class="bi bi-facebook"></i></a>
+  <div class="container-fluid pt-2 " style="background-color: #0D1D35;">
+    <div class="container mt-5">
+      <div class="row text-white">
+        <div class="col-md-4 col-12 mb-2 mb-md-0">
+          <a href="index.html"><img class="mb-3" style="width: 100px; border-radius: 5px;" src="images/main_logo.png"
+              alt="footer logo"></a>
+
+          <p>Landview Group is a locally owned developer company in Gulshan, Dhaka that specializes in a full range of
+            property services.</p>
+          <div class="all-socail-logo mt-4">
+            <div class="social-logo">
+              <a href="#"><i class="bi bi-facebook"></i></a>
+            </div>
+            <div class="social-logo">
+              <a href="#"><i class="bi bi-twitter"></i></a>
+            </div>
+            <div class="social-logo">
+              <a href="#"><i class="bi bi-instagram"></i></a>
+            </div>
+            <div class="social-logo">
+              <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
           </div>
-          <div class="social-logo">
-            <a href="#"><i class="bi bi-twitter"></i></a>
+
+        </div>
+        <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
+          <h5>Quick Links</h5>
+          <ul class="footer-border-right ps-0 mt-4">
+            <li>
+              <a href="about-us.html">About Us</a>
+            </li>
+            <li>
+              <a href="businesses.html">Businesses</a>
+            </li>
+            <li>
+              <a href="offers.html">Offers</a>
+            </li>
+            <li>
+              <a href="construction-status.html">Constraction Status</a>
+            </li>
+            <li>
+              <a href="contact-us.html">Contact Us</a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
+          <h5>Contact Info</h5>
+          <div class="contact-info mt-4">
+            <div class="contact-icon">
+              <a href="#"><i class="bi bi-map"></i></a>
+            </div>
+            <div class="contact-address">
+              <p>Plot-11/B (Navana Bilkis), Road -36, Gulshan 2, Dhaka-1212 </p>
+            </div>
           </div>
-          <div class="social-logo">
-            <a href="#"><i class="bi bi-instagram"></i></a>
+
+          <div class="contact-info">
+            <div class="contact-icon">
+              <a href="#"><i class="bi bi-telephone"></i></a>
+            </div>
+            <div class="contact-address">
+              <a href="#" class="text-decoration-none">
+                <p> +8802226 602299, +880 18 9748 5737 </p>
+              </a>
+            </div>
           </div>
-          <div class="social-logo">
-            <a href="#"><i class="bi bi-linkedin"></i></a>
+
+          <div class="contact-info">
+            <div class="contact-icon">
+              <a href="#"><i class="bi bi-envelope-open"></i></a>
+            </div>
+            <div class="contact-address">
+              <a href="#" class="text-decoration-none">
+                <p>landviewgroup@gmail.com</p>
+              </a>
+            </div>
           </div>
         </div>
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
 
+          <div class="row footer-gallery">
+            <h5 class="mb-4">Gallery</h5>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/business-bg-_2.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/business-bg-_2.jpg" alt="" />
+              </a>
+            </div>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/business-bg-_1.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/business-bg-_1.jpg" alt="" />
+              </a>
+            </div>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/work-showcase-1.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/work-showcase-1.jpg" alt="" />
+              </a>
+            </div>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/business-bg-_3.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/business-bg-_3.jpg" alt="" />
+              </a>
+            </div>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/work-showcase-2.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/work-showcase-2.jpg" alt="" />
+              </a>
+            </div>
+
+            <div class="col-4 mb-md-4 mb-2">
+              <a class="example-image-link" href="images2/work-showcase-4.jpg" data-lightbox="example-set"
+                data-title="Click the right half of the image to move forward.">
+
+                <img class="example-image img-fluid" src="images2/work-showcase-4.jpg" alt="" />
+              </a>
+            </div>
+
+
+
+          </div>
+        </div>
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
-        <h5>Quick Links</h5>
-        <ul class="footer-border-right ps-0 mt-4">
-          <li>
-            <a href="about-us.html">About Us</a>
-          </li>
-          <li>
-            <a href="businesses.html">Businesses</a>
-          </li>
-          <li>
-            <a href="offers.html">Offers</a>
-          </li>
-          <li>
-            <a href="construction-status.html">Constraction Status</a>
-          </li>
-          <li>
-            <a href="contact-us.html">Contact Us</a>
-          </li>
+    </div>
 
-        </ul>
-      </div>
-      <div class="col-md-3 col-12">
-        <h5>Contact Info</h5>
-        <div class="contact-info mt-4">
-          <div class="contact-icon">
-            <a href="#"><i class="bi bi-map"></i></a>
-          </div>
-          <div class="contact-address">
-            <p>Plot-11/B (Navana Bilkis), Road -36, Gulshan 2, Dhaka-1212 </p>
-          </div>
-        </div>
-
-        <div class="contact-info">
-          <div class="contact-icon">
-            <a href="#"><i class="bi bi-telephone"></i></a>
-          </div>
-          <div class="contact-address">
-            <a href="#" class="text-decoration-none">
-              <p> +8802226 602299, +880 18 9748 5737 </p>
-            </a>
-          </div>
-        </div>
-
-        <div class="contact-info">
-          <div class="contact-icon">
-            <a href="#"><i class="bi bi-envelope-open"></i></a>
-          </div>
-          <div class="contact-address">
-            <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-12">
-
-        <div class="row footer-gallery">
-          <h5 class="mb-4">Gallery</h5>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/business-bg-_2.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/business-bg-_2.jpg" alt="" />
-            </a>
-          </div>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/business-bg-_1.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/business-bg-_1.jpg" alt="" />
-            </a>
-          </div>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/work-showcase-1.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/work-showcase-1.jpg" alt="" />
-            </a>
-          </div>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/business-bg-_3.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/business-bg-_3.jpg" alt="" />
-            </a>
-          </div>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/work-showcase-2.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/work-showcase-2.jpg" alt="" />
-            </a>
-          </div>
-
-          <div class="col-4 mb-md-4 mb-2">
-            <a class="example-image-link" href="images2/work-showcase-4.jpg" data-lightbox="example-set"
-              data-title="Click the right half of the image to move forward.">
-
-              <img class="example-image img-fluid" src="images2/work-showcase-4.jpg" alt="" />
-            </a>
-          </div>
-
-
-
+    <div class="container border-top border-secondary mt-5">
+      <div class="row text-white">
+        <div class="col-12 d-flex justify-content-center align-items-center ">
+          <hr>
+          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
         </div>
       </div>
     </div>
+
   </div>
 
-  <div class="container border-top border-secondary mt-5">
-    <div class="row text-white">
-      <div class="col-12 d-flex justify-content-center align-items-center ">
-        <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-<!-- **********Footer Part End*********** -->
-
+  <!-- **********Footer Part End*********** -->
 
 <!-- Boostrap Js bundle with popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
