--- a/about-us.html
+++ b/about-us.html
@@ -359,11 +359,11 @@
           <div class=" col-12">
 
             <div class="row">
-              <p class="font font-wt text-warning">WHY CHOOSE US</p>
-              <h2 class="mb-5 font-wt text-success"><b>Why Would You Choose Landview Group?</b></h2>
+              <p class="font font-wt text-warning text-md-start text-center ">WHY CHOOSE US</p>
+              <h2 class="mb-5 font-wt text-success text-md-start text-center"><b>Why Would You Choose Landview Group?</b></h2>
 
-              <div class="col-md-6 col-12 d-flex mb-3">
-                <div class="W-Ch-Icon">
+              <div class="col-md-6 col-12 d-md-flex mb-3 text-md-start text-center">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-view-stacked icon-design"></i>
                 </div>
 
@@ -380,10 +380,10 @@
 
 
 
-              <div class="col-md-6 col-12 d-flex mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-person-heart icon-design"></i>
 
                 </div>
@@ -398,10 +398,10 @@
 
               </div>
 
-              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-md-0 mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-tags-fill icon-design"></i>
 
                 </div>
@@ -417,10 +417,10 @@
               </div>
 
 
-              <div class="col-md-6 col-12 d-flex mb-md-0 mb-5">
+              <div class="col-md-6 col-12 d-md-flex mb-md-0 mb-5 text-md-start text-center">
 
 
-                <div class="W-Ch-Icon">
+                <div class="W-Ch-Icon mb-3">
                   <i class="bi bi-hand-thumbs-up-fill icon-design"></i>
 
                 </div>
@@ -458,7 +458,7 @@
       <div class="container ">
         <div class="row pb-5 ">
 
-          <div class="mt-5 text-white">
+          <div class="mt-5 text-white text-md-start text-center">
             <h2 class="font-wt">Recent Work Showcase</h2>
           </div>
 
@@ -530,7 +530,7 @@
           </div>
 
         </div>
-        <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+        <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
           <h5>Quick Links</h5>
           <ul class="footer-border-right ps-0 mt-4">
             <li>
@@ -551,7 +551,7 @@
 
           </ul>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
           <h5>Contact Info</h5>
           <div class="contact-info mt-4">
             <div class="contact-icon">
@@ -579,12 +579,12 @@
             </div>
             <div class="contact-address">
               <a href="#" class="text-decoration-none">
-                <p>xyz@gmail.com</p>
+                <p>landviewgroup@gmail.com</p>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
 
           <div class="row footer-gallery">
             <h5 class="mb-4">Gallery</h5>
@@ -648,7 +648,7 @@
       <div class="row text-white">
         <div class="col-12 d-flex justify-content-center align-items-center ">
           <hr>
-          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
         </div>
       </div>
     </div>
