--- a/classic-house-five.html
+++ b/classic-house-five.html
@@ -492,11 +492,9 @@
 
 <!-- **********Our Interior Design End********* -->
 
+ <!-- **********Footer Part Start*********** -->
 
-
-<!-- **********Footer Part Start*********** -->
-
-<div class="container-fluid pt-2 " style="background-color: #0D1D35;">
+ <div class="container-fluid pt-2 " style="background-color: #0D1D35;">
   <div class="container mt-5">
     <div class="row text-white">
       <div class="col-md-4 col-12 mb-2 mb-md-0">
@@ -521,7 +519,7 @@
         </div>
 
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+      <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
         <h5>Quick Links</h5>
         <ul class="footer-border-right ps-0 mt-4">
           <li>
@@ -542,7 +540,7 @@
 
         </ul>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
         <h5>Contact Info</h5>
         <div class="contact-info mt-4">
           <div class="contact-icon">
@@ -570,12 +568,12 @@
           </div>
           <div class="contact-address">
             <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
+              <p>landviewgroup@gmail.com</p>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
 
         <div class="row footer-gallery">
           <h5 class="mb-4">Gallery</h5>
@@ -639,7 +637,7 @@
     <div class="row text-white">
       <div class="col-12 d-flex justify-content-center align-items-center ">
         <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
       </div>
     </div>
   </div>
@@ -647,6 +645,10 @@
 </div>
 
 <!-- **********Footer Part End*********** -->
+
+
+
+
 
 
 <!-- Boostrap Js bundle with popper -->
