--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="col-md-8 col-12 py-4 ps-5">
 
           <p><b>ABOUT US</b></p>
-          <h2><b>We Are Service Provider</b></h2>
+          <h2><b>We Are Service Providers</b></h2>
           <p>Landview Group is a real estate firm with high standards known for its professionalism in the industry
             and as one of the pioneers of the real estate sector of Bangladesh. Our dedication and years of experience
             with an ongoing pursuit of excellence have earned us an advantageous position in the sector. We are truly
@@ -515,6 +515,7 @@
 
 
 
+  
   <!-- **********Footer Part Start*********** -->
 
   <div class="container-fluid pt-2 " style="background-color: #0D1D35;">
@@ -542,7 +543,7 @@
           </div>
 
         </div>
-        <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+        <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
           <h5>Quick Links</h5>
           <ul class="footer-border-right ps-0 mt-4">
             <li>
@@ -563,7 +564,7 @@
 
           </ul>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
           <h5>Contact Info</h5>
           <div class="contact-info mt-4">
             <div class="contact-icon">
@@ -591,12 +592,12 @@
             </div>
             <div class="contact-address">
               <a href="#" class="text-decoration-none">
-                <p>xyz@gmail.com</p>
+                <p>landviewgroup@gmail.com</p>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 mt-md-0 mt-4">
 
           <div class="row footer-gallery">
             <h5 class="mb-4">Gallery</h5>
@@ -660,7 +661,7 @@
       <div class="row text-white">
         <div class="col-12 d-flex justify-content-center align-items-center ">
           <hr>
-          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+          <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
         </div>
       </div>
     </div>
