--- a/contact-us.html
+++ b/contact-us.html
@@ -229,8 +229,9 @@
 <div class="container">
   <div class="row mb-5">
     <div class="col-12 shadow rounded p-2 pb-0">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55683.20232185889!2d-94.87546852204242!3d29.276451951278446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x863f9c49f090f0d3%3A0xdc3219e3b6052c0c!2zR2FsdmVzdG9uLCDgpp_gp4fgppXgp43gprjgpr7gprggNzc1NTEsIOCmruCmvuCmsOCnjeCmleCmv-CmqCDgpq_gp4HgppXgp43gpqTgprDgpr7gprfgp43gpp_gp43gprA!5e0!3m2!1sbn!2sbd!4v1722963810788!5m2!1sbn!2sbd" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29205.3876631316!2d90.39380679895746!3d23.794639751005274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7ea2226ffa3%3A0xaa90cbfb4c404652!2z4Kao4Ka-4Kat4Ka-4Kao4Ka-IOCmrOCmv-CmsuCmleCmv-CmuCDgprLgprDgpr7gpoE!5e0!3m2!1sbn!2sbd!4v1725793777962!5m2!1sbn!2sbd" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    
   </div>
 </div>
     
@@ -263,7 +264,7 @@
         </div>
 
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+      <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
         <h5>Quick Links</h5>
         <ul class="footer-border-right ps-0 mt-4">
           <li>
@@ -284,7 +285,7 @@
 
         </ul>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
         <h5>Contact Info</h5>
         <div class="contact-info mt-4">
           <div class="contact-icon">
@@ -312,12 +313,12 @@
           </div>
           <div class="contact-address">
             <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
+              <p>landviewgroup@gmail.com</p>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
 
         <div class="row footer-gallery">
           <h5 class="mb-4">Gallery</h5>
@@ -381,7 +382,7 @@
     <div class="row text-white">
       <div class="col-12 d-flex justify-content-center align-items-center ">
         <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
       </div>
     </div>
   </div>
@@ -389,6 +390,7 @@
 </div>
 
 <!-- **********Footer Part End*********** -->
+
 
 
 <!-- Boostrap Js bundle with popper -->
