--- a/classic-house-three.html
+++ b/classic-house-three.html
@@ -522,7 +522,7 @@
         </div>
 
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+      <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
         <h5>Quick Links</h5>
         <ul class="footer-border-right ps-0 mt-4">
           <li>
@@ -543,7 +543,7 @@
 
         </ul>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
         <h5>Contact Info</h5>
         <div class="contact-info mt-4">
           <div class="contact-icon">
@@ -571,12 +571,12 @@
           </div>
           <div class="contact-address">
             <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
+              <p>landviewgroup@gmail.com</p>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
 
         <div class="row footer-gallery">
           <h5 class="mb-4">Gallery</h5>
@@ -640,7 +640,7 @@
     <div class="row text-white">
       <div class="col-12 d-flex justify-content-center align-items-center ">
         <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
       </div>
     </div>
   </div>
