luxury page update

--- a/luxury-house-one.html
+++ b/luxury-house-one.html
@@ -134,9 +134,11 @@
              <a  href="index.html" class=" sp-hover text-white me-3 "> <i class="bi bi-house"></i></a>
              <a href="index.html" class="sp-hover text-decoration-none text-white"> <p class="me-3 mb-0">Home</p></a>
               <i class="bi bi-box-arrow-in-right me-3"></i>
-              <p class="mb-0">Properties</p>
+              <a href="#" class="sp-hover text-decoration-none text-white"> <p class="me-3 mb-0">Properties</p></a>
+
               <i class="bi bi-box-arrow-in-right mx-3"></i>
-              <p class="mb-0">Luxury</p>
+              <a href="luxury.html" class="sp-hover text-decoration-none text-white"> <p class="me-3 mb-0">Luxury</p></a>
+              
             </div>
 
           </div>
@@ -428,7 +430,7 @@
         </div>
 
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+      <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
         <h5>Quick Links</h5>
         <ul class="footer-border-right ps-0 mt-4">
           <li>
@@ -449,7 +451,7 @@
 
         </ul>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
         <h5>Contact Info</h5>
         <div class="contact-info mt-4">
           <div class="contact-icon">
@@ -477,12 +479,12 @@
           </div>
           <div class="contact-address">
             <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
+              <p>landviewgroup@gmail.com</p>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
 
         <div class="row footer-gallery">
           <h5 class="mb-4">Gallery</h5>
@@ -546,7 +548,7 @@
     <div class="row text-white">
       <div class="col-12 d-flex justify-content-center align-items-center ">
         <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
       </div>
     </div>
   </div>
