--- a/luxury.html
+++ b/luxury.html
@@ -421,7 +421,7 @@
         </div>
 
       </div>
-      <div class="col-md-2 col-12 quick-link mt-md-0 mt-3">
+      <div class="col-md-2 col-12 quick-link mt-md-0 mt-4">
         <h5>Quick Links</h5>
         <ul class="footer-border-right ps-0 mt-4">
           <li>
@@ -442,7 +442,7 @@
 
         </ul>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
         <h5>Contact Info</h5>
         <div class="contact-info mt-4">
           <div class="contact-icon">
@@ -470,12 +470,12 @@
           </div>
           <div class="contact-address">
             <a href="#" class="text-decoration-none">
-              <p>xyz@gmail.com</p>
+              <p>landviewgroup@gmail.com</p>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 mt-md-0 mt-4">
 
         <div class="row footer-gallery">
           <h5 class="mb-4">Gallery</h5>
@@ -539,7 +539,7 @@
     <div class="row text-white">
       <div class="col-12 d-flex justify-content-center align-items-center ">
         <hr>
-        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Developed by Masud Rana</p>
+        <p class="mb-0">Copyright ©2024 Landview Group - All rights reserved | Design & Development by <a href="https://webnewsdesign.com/" target="_blank">webnewsdesign.com</a></p>
       </div>
     </div>
   </div>
@@ -547,7 +547,6 @@
 </div>
 
 <!-- **********Footer Part End*********** -->
-
 
 <!-- Boostrap Js bundle with popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
