--- a/contact-us.html
+++ b/contact-us.html
@@ -191,12 +191,12 @@
 
                   
                     <form action="action_page.php">
-                      <div class="s d-flex justify-content-between">
+                      <div class="s d-md-flex justify-content-between">
                         <div class="column d-flex flex-column w-100 me-2">
                           <label for="fname"><b>Full Name</b></label>
                           <input type="text" id="fname" name="firstname" placeholder="Your full name.." class="py-2 px-1 border border-info">
                         </div>
-                        <div class="column d-flex flex-column w-100">
+                        <div class="column d-flex flex-column w-100 mt-3">
                           <label for="pnumber"><b>Phone Number</b></label>
                           <input type="text" id="pnumber" name="phonenumber" placeholder="Your phone number.." class="py-2 px-1 border border-info">
                         </div>
